# ports_and_adapters

./: Cargo.toml
src/lib/: config.rs  context.rs  lib.rs
src/lib/adapter/: mod.rs
src/lib/adapter/http_in/: metrics.rs  mod.rs  training.rs
src/lib/model/: mod.rs
src/lib/model/domain/: hour.rs  mod.rs
src/lib/model/wire/inbound/: mod.rs
src/lib/port/: context.rs  mod.rs  training.rs
src/lib/port/contract/: mod.rs  repository.rs  stream_processor.rs
