[package]
name = "boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "boilerplate"
path = "src/lib/lib.rs"

[[bin]]
name = "main"


[dependencies]
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros"] }
axum = "0.5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.53"
chrono = "0.4.19"
thiserror = "1.0.30"
anyhow = "1.0.57"

[dev-dependencies]
mockall = "0.11.0"